--- a/WebLibraryProject/src/main/resources/templates/create-loan.html
+++ b/WebLibraryProject/src/main/resources/templates/create-loan.html
@@ -14,7 +14,11 @@
 <body>
 <nav th:replace="navbar:: Navbar"></nav>
 <div class="container">
-
+    <form th:action="@{/create/loan/process}" th:object="${form}" method="post">
+        <label for="startDate">Loan date</label>
+        <input class="form-control" type="date" id="startDate" th:field="*{firstName}"/>
+        <button class="btn btn-primary" type="submit">Send</button>
+    </form>
 </div>
 </body>
 </html>
