--- a/WebLibraryProject/src/main/resources/templates/create-loan.html
+++ b/WebLibraryProject/src/main/resources/templates/create-loan.html
@@ -14,10 +14,43 @@
 <body>
 <nav th:replace="navbar:: Navbar"></nav>
 <div class="container">
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Title</th>
+            <th>Max loan days</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td th:text="${book.title}"></td>
+            <td th:text="${book.maxLoanDays}"></td>
+        </tr>
+        </tbody>
+    </table>
     <form th:action="@{/create/loan/process}" th:object="${form}" method="post">
+
         <label for="startDate">Loan date</label>
-        <input class="form-control" type="date" id="startDate" th:field="*{firstName}"/>
-        <button class="btn btn-primary" type="submit">Send</button>
+        <input class="form-control" type="date" id="startDate" th:field="*{startDate}"/>
+        <div th:if="${#fields.hasErrors('startDate')}">
+            <ul class="p-0">
+                <li th:each="error : ${#fields.errors('startDate')}">
+                    <span class="form-error" th:text="${error}"></span>
+                </li>
+            </ul>
+        </div>
+        <label for="endDate">Return date</label>
+        <input class="form-control" type="date" id="endDate" th:field="*{endDate}"/>
+        <div th:if="${#fields.hasErrors('endDate')}">
+            <ul class="p-0">
+                <li th:each="error : ${#fields.errors('endDate')}">
+                    <span class="form-error" th:text="${error}"></span>
+                </li>
+            </ul>
+        </div>
+        <input th:type="hidden" name="appUserEmail" id="appUserEmail" th:value="${#authentication.name}">
+        <input th:type="hidden" id="libraryBookId" name="libraryBookId" th:value="${libraryBookId}">
+        <button class="btn btn-primary" type="submit">Borrow Book</button>
     </form>
 </div>
 </body>
