--- a/WebLibraryProject/src/main/resources/templates/login.html
+++ b/WebLibraryProject/src/main/resources/templates/login.html
@@ -1,7 +1,6 @@
 <!-- Author: Benjamin Boson & Cheng Tao-->
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <script defer th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script defer th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
@@ -9,19 +8,17 @@
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.css}">
     <link rel="stylesheet" th:href="@{/style.css}">
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Login</title>
 </head>
 <body>
-<nav th:replace="navbar:: Navbar"></nav>
 <div class="container">
-    <form sec:authorized="!isAuthenticated()" th:action="@{/login}" method="post" >
+    <form th:action="@{/login}" method="post" th:fragment="Login">
         <label for="email">Email:</label>
         <input class="form-control" type="email" name="email" id="email" placeholder="Enter your email..."/>
         <label for="password">Password:</label>
         <input class="form-control" type="password" name="password" id="password" placeholder="Enter your password...">
         <button class="btn btn-primary" type="submit">Login</button>
     </form>
-    <a class="nav-link" th:href="@{/create/user}">Register New User</a>
 </div>
 </body>
 </html>
