--- a/WebLibraryProject/src/main/resources/templates/navbar.html
+++ b/WebLibraryProject/src/main/resources/templates/navbar.html
@@ -1,6 +1,7 @@
-<!-- Author: Benjamin Boson -->
+<!-- Author: Benjamin Boson & Cheng Tao -->
 <!DOCTYPE html>
-<html lang="en"xmlns:th="http://www.thymeleaf.org" >
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
@@ -16,14 +17,24 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <!--                <form class="form-control" th:replace="user-search :: search-email"/>-->
-                <a class="nav-link" th:href="@{/books}">Books</a>
-            </li>
+            <div sec:authorize="isAuthenticated()">
+                <li class="nav-item active">
+                    <!--                <form class="form-control" th:replace="user-search :: search-email"/>-->
+                    <a class="nav-link" th:href="@{/books}">Books</a>
+                </li>
+            </div>
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/create/user}">Create user</a>
             </li>
         </ul>
+        <form th:action="@{/logout}" action="#" class="form-inline" method="post">
+            <div sec:authorize="isAuthenticated()">
+                <button class="btn btn-outline-info" type="submit" value="Logout">Logout</button>
+            </div>
+            <div sec:authorize="isAnonymous()">
+                <a class="btn btn-outline-info" th:href="@{/login}" href="#" value="Login">Login</a>
+            </div>
+        </form>
     </div>
 </nav>
 </body>
