--- a/WebLibraryProject/src/main/resources/templates/users-view.html
+++ b/WebLibraryProject/src/main/resources/templates/users-view.html
@@ -1,4 +1,4 @@
-<!-- Author: Benjamin Boson -->
+<!-- Author: Rijad Hamula -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
