Exception layer added

--- a/WebLibraryProject/src/main/resources/templates/books.html
+++ b/WebLibraryProject/src/main/resources/templates/books.html
@@ -18,6 +18,7 @@
         <thead>
         <tr>
             <th scope="col">Title</th>
+            <th scope="col">Author</th>
             <th scope="col">Max loan days</th>
             <th scope="col">Available</th>
             <th scope="col">Reserved</th>
