--- a/WebLibraryProject/src/main/resources/templates/books-view.html
+++ b/WebLibraryProject/src/main/resources/templates/books-view.html
@@ -11,25 +11,28 @@
     <meta charset="UTF-8">
     <title>Books</title>
 </head>
-        <body>
-        <nav th:replace="navbar:: Navbar"></nav>
-        <div class="container">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">Title</th>
-                    <th scope="col">Max loan days</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="book: ${bookList}">
-                    <td><span th:text="${book.title}"></span></td>
-                    <td><span th:text="${book.maxLoanDays}"></span></td>
-                    <td th:if="${book.isAvailable()}"><a class="btn btn-primary btn-sm" th:href="@{/create/loan/{id} (id=${book.bookId})}">Borrow</a></td>
-                    <td th:if="${!book.isAvailable()}"><span>Not Available</span></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        </body>
+<body>
+<nav th:replace="navbar:: Navbar"></nav>
+<div class="container">
+
+
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">Title</th>
+            <th scope="col">Max loan days</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="book: ${bookList}">
+            <td><span th:text="${book.title}"></span></td>
+            <td><span th:text="${book.author}"></span></td>
+            <td><span th:text="${book.maxLoanDays}"></span></td>
+            <td th:if="${book.isAvailable()}"><a class="btn btn-primary btn-sm" th:href="@{/create/loan/{id} (id=${book.bookId})}">Borrow</a></td>
+            <td th:if="${!book.isAvailable()}"><span>Not Available</span></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+</body>
 </html>
