--- a/WebLibraryProject/src/main/resources/templates/create-loan.html
+++ b/WebLibraryProject/src/main/resources/templates/create-loan.html
@@ -24,12 +24,12 @@
         <tbody>
         <tr>
             <td th:text="${book.title}"></td>
+            <td th:text="${book.author}"></td>
             <td th:text="${book.maxLoanDays}"></td>
         </tr>
         </tbody>
     </table>
     <form th:action="@{/create/loan/process}" th:object="${form}" method="post">
-
         <label for="startDate">Loan date</label>
         <input class="form-control" type="date" id="startDate" th:field="*{startDate}"/>
         <div th:if="${#fields.hasErrors('startDate')}">
@@ -49,7 +49,7 @@
             </ul>
         </div>
         <input th:type="hidden" name="appUserEmail" id="appUserEmail" th:value="${#authentication.name}">
-        <input th:type="hidden" id="libraryBookId" name="libraryBookId" th:value="${libraryBookId}">
+        <input th:type="hidden" id="bookId" name="bookId" th:value="${book.bookId}">
         <button class="btn btn-primary" type="submit">Borrow Book</button>
     </form>
 </div>
