--- a/WebLibraryProject/src/main/resources/templates/login.html
+++ b/WebLibraryProject/src/main/resources/templates/login.html
@@ -1,4 +1,5 @@
 <!-- Author: Benjamin Boson & Cheng Tao-->
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -11,8 +12,9 @@
     <title>Login</title>
 </head>
 <body>
+<nav th:replace="navbar:: Navbar"></nav>
 <div class="container">
-    <form th:action="@{/login}" method="post" th:fragment="Login">
+    <form th:action="@{/login}" method="post">
         <label for="email">Email:</label>
         <input class="form-control" type="email" name="email" id="email" placeholder="Enter your email..."/>
         <label for="password">Password:</label>
@@ -20,5 +22,6 @@
         <button class="btn btn-primary" type="submit">Login</button>
     </form>
 </div>
+
 </body>
 </html>
