--- a/WebLibraryProject/src/main/resources/templates/books-view.html
+++ b/WebLibraryProject/src/main/resources/templates/books-view.html
@@ -1,4 +1,5 @@
-<!-- Author: Benjamin Boson -->
+<!-- Author: Benjamin Boson  & Cheng Tao-->
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
@@ -14,25 +15,35 @@
 <body>
 <nav th:replace="navbar:: Navbar"></nav>
 <div class="container">
-
-
-    <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">Title</th>
-            <th scope="col">Max loan days</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="book: ${bookList}">
-            <td><span th:text="${book.title}"></span></td>
-            <td><span th:text="${book.author}"></span></td>
-            <td><span th:text="${book.maxLoanDays}"></span></td>
-            <td th:if="${book.isAvailable()}"><a class="btn btn-primary btn-sm" th:href="@{/create/loan/{id} (id=${book.bookId})}">Borrow</a></td>
-            <td th:if="${!book.isAvailable()}"><span>Not Available</span></td>
-        </tr>
-        </tbody>
-    </table>
+    <h2>Search for a book/ books</h2>
+    <form th:object="${searchResult}" th:action="@{/search}" method="get">
+        <input type="text" name="search" id="search" placeholder="Enter the book title" />
+        <input type="submit" value="Search">
+        <div>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Title</th>
+                    <th scope="col">Max loan days</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:if="${searchResult == null || searchResult.isEmpty()}" th:each="book: ${bookList}">
+                    <td><span th:text="${book.title}"></span></td>
+                    <td><span th:text="${book.maxLoanDays}"></span></td>
+                    <td th:if="${book.isAvailable()}"><a class="btn btn-primary btn-sm" th:href="@{/create/loan/{id} (id=${book.bookId})}">Borrow</a></td>
+                    <td th:if="${!book.isAvailable()}"><span>Not Available</span></td>
+                </tr>
+                <tr th:enless="${searchResult == null || searchResult.isEmpty()}" th:each="book: ${searchResult}">
+                    <td><span th:text="${book.title}"></span></td>
+                    <td><span th:text="${book.maxLoanDays}"></span></td>
+                    <td th:if="${book.isAvailable()}"><a class="btn btn-primary btn-sm" th:href="@{/create/loan/{id} (id=${book.bookId})}">Borrow</a></td>
+                    <td th:if="${!book.isAvailable()}"><span>Not Available</span></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </form>
 </div>
 </body>
 </html>
