--- a/WebLibraryProject/src/main/resources/templates/create-loan.html
+++ b/WebLibraryProject/src/main/resources/templates/create-loan.html
@@ -18,6 +18,7 @@
         <thead>
         <tr>
             <th>Title</th>
+            <th>Author</th>
             <th>Max loan days</th>
         </tr>
         </thead>
