--- a/WebLibraryProject/src/main/resources/templates/exception-view.html
+++ b/WebLibraryProject/src/main/resources/templates/exception-view.html
@@ -1,4 +1,4 @@
-<!--Author Benjamin Boson-->
+<!--Author: Benjamin Boson-->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
