--- a/WebLibraryProject/src/main/resources/templates/create-book.html
+++ b/WebLibraryProject/src/main/resources/templates/create-book.html
@@ -13,12 +13,10 @@
 </head>
 <body>
 <nav th:replace="navbar:: Navbar"></nav>
-<div class="container">
+<div class="container" sec:authorize="hasAuthority('ADMIN')">
     <form th:action="@{/create/book/process}" th:object="${form}" method="post">
         <label for="title">Title</label>
         <input class="form-control" type="text" id="title" th:field="*{title}"/>
-        <label for="author">Author</label>
-        <input class="form-control" type="text" id="author" th:field="*{author}"/>
         <label for="maxLoanDays">Max loan days</label>
         <input class="form-control" type="number" id="maxLoanDays" th:field="*{maxLoanDays}">
         <div th:if="${#fields.hasErrors('maxLoanDays')}">
