--- a/WebLibraryProject/src/main/resources/templates/navbar.html
+++ b/WebLibraryProject/src/main/resources/templates/navbar.html
@@ -23,8 +23,11 @@
             <li sec:authorize="isAuthenticated()" class="nav-item">
                 <a class="nav-link" th:href="@{/loans/{email} (email=${#authentication.name})}">Loans</a>
             </li>
-            <li sec:authorize="!isAuthenticated()" class="nav-item">
+            <li sec:authorize="!isAuthenticated() || hasAuthority('ADMIN')") class="nav-item">
                 <a class="nav-link" th:href="@{/create/user}">Create user</a>
+            </li>
+            <li sec:authorize="hasAuthority('ADMIN')" class="nav-item">
+                <a class="nav-link mr-3 border-bottom" th:href="@{/create/book}">Create book</a>
             </li>
             <div sec:authorize="isAuthenticated()">
                 <li sec:authorize="hasAuthority('ADMIN')">
